Ass-1/getting_started/test_files/syntax_errors/IllegalIfInIfCondition.cpm
class MyClass {
  Init() : boolean {
    if (if (true)) {   //@error - syntax (illegal boolean condition)
    }
    return true
}

main() : int {
  print(MyClass().Init())
  return 0
}
}